# lambda-hive

./: .gitignore  17829.971435s.hive  18088.2042s.hive  65923.143032s.hive  LambdaHive.cabal  README.md  game1.hive  game2.hive  stack.yaml  test.txt
app/: Main.hs  SlackBot.hs
sgf/: test.sgf  test2.sgf  test3.sgf
src/AI/: Gametree.hs  Minimax.hs
src/Data/List/: Zipper.hs
src/Data/SGF/: Hive.hs
src/LambdaHive/: AI.hs  Canvas.hs  Diagram.hs  Genetic.hs  Types.hs
src/LambdaHive/Parser/: Move.hs
src/LambdaHive/SVG/: Printer.hs
src/SlackBot/: HiveBot.hs  Parser.hs  Types.hs  WebAPI.hs
