name:                LambdaHive
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LambdaHive#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.SGF.Hive, LambdaHive.Types, LambdaHive.SVG.Printer, LambdaHive.Parser.Move
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , containers
                     , linear
                     , bimap
                     , random
                     , MissingH
                     , diagrams
                     , diagrams-lib
                     , diagrams-core
                     , diagrams-svg
                     , diagrams-contrib
                     , diagrams-canvas
                     , blank-canvas
                     , colour
                     , safe
  default-language:    Haskell2010

executable LambdaHive-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LambdaHive
  default-language:    Haskell2010

test-suite LambdaHive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LambdaHive
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LambdaHive
