name:                LambdaHive
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/LambdaHive#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N4 -O2
  exposed-modules:     Data.SGF.Hive
                     , LambdaHive.Types
                     , LambdaHive.Canvas
                     , LambdaHive.Parser.Move
                     , LambdaHive.AI
                     , LambdaHive.Genetic
                     , AI.Gametree
                     , AI.Minimax
                     , Data.List.Zipper
                     , SlackBot.Types
                     , SlackBot.WebAPI
                     , SlackBot.Parser
                     , SlackBot.HiveBot
  build-depends:       base >= 4.7 && < 5
                     , trifecta
                     , containers
                     , linear
                     , bimap
                     , random
                     , MissingH
                     , diagrams
                     , diagrams-lib
                     , diagrams-core
                     , diagrams-contrib
                     , diagrams-canvas
                     , diagrams-svg
                     , diagrams-cairo
                     , blank-canvas
                     , colour
                     , safe
                     , stm
                     , parallel
                     , text
                     , monad-parallel
                     , split
                     , time
                     , deepseq
                     , igraph
                     , lens
                     , slack-api
                     , regex-posix
                     , containers
                     , mtl
                     , aeson
                     , bytestring
                     , wreq
                     , uuid
                     , directory
  default-language:    Haskell2010

executable SlackBot-exe
  hs-source-dirs:      app
  main-is:             SlackBot.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N4 -O2
  build-depends:       base
                     , LambdaHive
                     , trifecta
                     , diagrams
                     , diagrams-lib
                     , diagrams-core
                     , diagrams-contrib
                     , diagrams-canvas
                     , time
                     , text
                     , slack-api
                     , transformers
                     , lens
                     , mtl
                     , aeson
                     , websockets
                     , wreq
                     , bytestring
                     , regex-posix
                     , ansi-wl-pprint
                     , containers
  default-language:    Haskell2010

executable LambdaHive-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N4 -O2
  build-depends:       base
                     , LambdaHive
                     , trifecta
                     , diagrams
                     , diagrams-lib
                     , diagrams-core
                     , diagrams-contrib
                     , diagrams-canvas
                     , diagrams-svg
                     , blank-canvas
                     , time
                     , text
                     , deepseq
                     , igraph
  default-language:    Haskell2010

test-suite LambdaHive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LambdaHive
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/LambdaHive
